# dcsp

./: .gitignore  Cargo.toml
docker-compose/: Cargo.toml
docker-compose/src/: lib.rs
ui/: .gitignore  Cargo.toml  deploy.sh  package.json  tailwind.config.js
ui/src/: main.rs  routes.rs  static_assets.rs
ui/templates/: base.html  containers.html  status.html
ui/templates/api/: status.html
